--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "homepage": "https://sergey-tumilovich.github.io/teamsompositionclient",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
